# points_cloud_manipulation

./: .gitignore  .gitpod.yml  Cargo.toml  readme.md
ps_cli/: Cargo.toml
ps_cli/src/: cli_arguments.rs  main.rs  server.rs
ps_data_layer/: Cargo.toml
ps_data_layer/old_unused/: main.rs
ps_data_layer/old_unused/utils/: app_state.rs  general_utils.rs  mesh_utils.rs  point_cloud_renderer.rs  shader.wgsl
ps_data_layer/src/: lib.rs
ps_mesh/: Cargo.toml
ps_mesh/src/: lib.rs  main.rs  point_mesh.rs  ps_creation.rs
ps_shapes_creator/: Cargo.toml
ps_shapes_creator/src/: main.rs
ps_visualizer/: Cargo.toml
ps_visualizer/src/: main.rs
src/: main.rs
src/utils/: app_state.rs  general_utils.rs  mesh_utils.rs  mod.rs  point_cloud_renderer.rs
static/: index.html  main.js
