[package]
name = "ps_mesh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
ps_data_layer = { path = "../ps_data_layer" }
kiss3d = "0.32" # to be removed!
nalgebra = "0.32.2" # to be removed!
